# llm-devproxy

./: .gitignore  .llm_devproxy_screenshot.db  README.md  fake_terminal_output.py  pricing.json  pyproject.toml  seed_dummy_data.py  seed_screenshot_data.py  test_core.py  test_full.py
.github/workflows/: test.yml
llm_devproxy/: __init__.py  dev_proxy.py
llm_devproxy/cli/: commands.py
llm_devproxy/core/: __init__.py  alerts.py  cache.py  cost_guard.py  diff.py  engine.py  export.py  models.py  pricing.py  semantic_cache.py  storage.py
llm_devproxy/integrations/: langchain.py  llamaindex.py
llm_devproxy/providers/: anthropic_wrapper.py  gemini_wrapper.py  openai_wrapper.py
llm_devproxy/proxy/: server.py
llm_devproxy/web/: __init__.py  app.py
llm_devproxy/web/templates/: alerts.html  base.html  costs.html  detail.html  diff.html  history.html  sessions.html  timeline.html
tests/: smoke_test_semantic.py  test_semantic_cache.py
tests/unit/: test_core.py  test_diff.py  test_integrations.py  test_pricing.py  test_streaming.py
